# typer

./: .coveragerc  .env  .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conftest.py  devenv.nix  mkdocs.env.yml  mkdocs.insiders.yml  mkdocs.maybe-insiders.yml  mkdocs.yml  mypy.ini  mypy_output.txt  pdm_build.py  plan.md  pre_commit_output.txt  pyproject.toml  requirements-docs-tests.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt  test.patch  test.sh  typer-slim.pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature-request.yml  privileged.yml  question.md  question.yml
.github/workflows/: add-to-project.yml  autoformat.yml  build-docs.yml  bump-pre-commit-hooks.yml  conflict.yml  create-draft-release.yml  deploy-docs.yml  guard-dependencies.yml  issue-manager.yml  labeler.yml  latest-changes.yml  pre-commit.yml  prepare-release.yml  preview-docs.yml  publish.yml  redistribute.yml  smokeshow.yml  test-cpython-main.yml  test-cpython-nightly.yml  test-redistribute.yml  test.yml  zizmor.yml
data/: members.yml
docs/: alternatives.md  contributing.md  environment-variables.md  features.md  help-typer.md  index.md  management-tasks.md  management.md  release-notes.md  typer-cli.md  virtual-environments.md
docs/about/: index.md
docs/css/: custom.css  termynal.css
docs/js/: custom.js  termynal.js
docs/overrides/: main.html
docs/reference/: context.md  file_objects.md  index.md  parameters.md  run_launch.md  typer.md
docs/resources/: index.md
docs/tutorial/: app-dir.md  arguments.md  async-cmd.md  async.md  click.md  commands.md  exceptions.md  first-steps.ja.md  first-steps.md  index.ja.md  index.md  install.ja.md  install.md  intro.md  launch.md  one-file-per-command.md  options-autocompletion.md  options.md  package.md  printing.ja.md  printing.md  progressbar.md  prompt.md  splitting-apps.md  terminating.ja.md  terminating.md  testing.md  typer-app.ja.md  typer-app.md  typer-command.md  typer-instance.md  using-click.md
docs_src/app_dir/: tutorial001.py  tutorial001_py310.py
docs_src/async/: tutorial001.py  tutorial002.py  tutorial003.py  tutorial004.py  tutorial005.py  tutorial006.py  tutorial007.py  tutorial008.py
docs_src/async_cmd/: async001.py  async002.py
docs_src/asynchronous/: tutorial001.py  tutorial002.py  tutorial003.py  tutorial005.py  tutorial006.py  tutorial007.py  tutorial008.py
docs_src/exceptions/: tutorial001.py  tutorial001_py310.py  tutorial002.py  tutorial002_py39.py  tutorial003_py310.py  tutorial004_py310.py  tutorial005.py  tutorial005_py310.py
docs_src/first_steps/: tutorial001_py310.py  tutorial002.py  tutorial002_py39.py  tutorial003_py310.py  tutorial004_py310.py  tutorial005.py  tutorial005_py310.py  tutorial006.py  tutorial006_py310.py
docs_src/launch/: tutorial001.py  tutorial001_py310.py  tutorial002.py
docs_src/one_file_per_command/: main.py
docs_src/options_autocompletion/: tutorial001.py  tutorial001_an.py  tutorial001_an_py310.py  tutorial001_py310.py  tutorial002.py  tutorial002_an.py  tutorial002_an_py310.py  tutorial002_py310.py  tutorial002_py39.py  tutorial003.py  tutorial003_an.py  tutorial003_an_py310.py  tutorial003_an_py39.py  tutorial003_py310.py  tutorial003_py39.py  tutorial004.py  tutorial004_an.py  tutorial004_an_py39.py  tutorial004_py310.py  tutorial005.py  tutorial005_an.py  tutorial005_an_py39.py  tutorial005_py310.py  tutorial005_py39.py  tutorial006.py  tutorial006_an.py  tutorial006_an_py310.py  tutorial006_an_py39.py  tutorial006_py310.py  tutorial006_py39.py  tutorial007.py  tutorial007_an.py  tutorial007_an_py310.py  tutorial007_an_py39.py  tutorial007_py310.py  tutorial007_py39.py  tutorial008.py  tutorial008_an.py  tutorial008_an_py310.py  tutorial008_an_py39.py  (+12 more)
docs_src/printing/: tutorial001.py  tutorial001_py310.py  tutorial002.py  tutorial002_py310.py  tutorial003.py  tutorial003_py39.py  tutorial004.py  tutorial005.py  tutorial006.py  tutorial006_py39.py
docs_src/progressbar/: tutorial001.py  tutorial002.py  tutorial002_py39.py  tutorial003.py  tutorial003_py310.py  (+6 more)
examples/: bytes_encoding_example.py  bytes_type_example.py
scripts/: add_latest_release_date.py  clean.py  deploy.sh  deploy_docs_status.py  docs-live.sh  docs.py  format-imports.sh  format.sh  get-pwsh-activate.sh  lint.sh  mkdocs_hooks.py  netlify-docs.sh  prepare_release.py  test-files.sh  test.sh
tests/: atomic_write_example.py  conftest.py  test_ambiguous_params.py  test_annotated.py  test_argument_metavar_rich.py  test_async.py  test_atomic_file.py  test_browser.py  test_bytes_encoding.py  test_bytes_type.py  test_callback_warning.py  test_cli_docs_hidden.py  test_command_line_args.py  test_command_tree.py  test_commands_aliases.py  test_completion.py  test_core.py  test_corner_cases.py  test_ctx_params_typing.py  test_deprecation.py  test_discovery_auto.py  test_enable_rich.py  test_enum_case.py  test_exit_errors.py  test_future_annotations.py  test_help_defaults.py  test_hidden.py  test_issue_493.py  test_kwargs.py  test_launch.py  test_main.py  test_no_args_help_exit_code.py  test_no_args_is_help.py  test_others.py  test_param_meta_empty.py  test_parameter_help.py  test_prepare_release.py  test_prog_name.py  test_progress_bar.py  test_rich_import.py  (+18 more)
typer/: __init__.py  _click_core.py  _compat.py  _compat_utils.py  _completion_classes.py  _completion_click7.py  _completion_click8.py  _completion_shared.py  _inspect.py  _types.py  _typing.py  adapters.py  browser.py  cli.py  coercion.py  colors.py  command_tree.py  completion.py  context.py  core.py  display.py  docstring_automation.py  extra_click_types.py  launch.py  main.py  models.py  param_types.py  params.py  pydantic_extension.py  rich_table.py  rich_utils.py  schema.py  testing.py  utils.py
typer-cli/: README.md
typer-slim/: README.md
typer_cli_package/: pdm_build.py  pyproject.toml
typer_package/: pdm_build.py  pyproject.toml
(+1047 files in other folders)
