[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "typer"
dynamic = ["version"]
description = "Typer, build great CLIs. Easy to code. Based on Python type hints."
authors = [
    {name = "Sebastián Ramírez", email = "tiangolo@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click >= 8.0.0",
    "typing-extensions >= 3.7.4.3",
]

[project.urls]
Documentation = "https://typer.tiangolo.com/"
homepage = "https://github.com/tiangolo/typer"

[project.optional-dependencies]
all = [
    "colorama >=0.4.3,<0.5.0",
    "shellingham >=1.3.0,<2.0.0",
    "rich >=10.11.0,<14.0.0",
]

[tool.pdm]
version = { source = "file", path = "typer/__init__.py" }

[tool.isort]
profile = "black"
known_third_party = ["typer", "click"]
skip_glob = [
    "docs_src/subcommands/tutorial001/main.py",
    "docs_src/subcommands/tutorial003/lands.py",
    "docs_src/subcommands/tutorial003/main.py",
    ]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = [
    "error",
    # TODO: until I refactor completion to use the new shell_complete
    "ignore:'autocompletion' is renamed to 'shell_complete'. The old name is deprecated and will be removed in Click 8.1. See the docs about 'Parameter' for information about new behavior.:DeprecationWarning:typer",
    # For pytest-xdist
    'ignore::DeprecationWarning:xdist',
]
