[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "typer"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
description = "Typer, build great CLIs. Easy to code. Based on Python type hints."
authors = [
    {name = "Sebastián Ramírez", email = "tiangolo@gmail.com"},
]
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click >= 8.0.0",
    "typing-extensions >= 3.7.4.3",
]
readme = "README.md"
[project.urls]
Homepage = "https://github.com/fastapi/typer"
Documentation = "https://typer.tiangolo.com"
Repository = "https://github.com/fastapi/typer"
Issues = "https://github.com/fastapi/typer/issues"
Changelog = "https://typer.tiangolo.com/release-notes/"

[project.optional-dependencies]
standard = [
    "shellingham >=1.3.0",
    "rich >=10.11.0",
]

[tool.pdm]
version = { source = "file", path = "typer/__init__.py" }
distribution = true

[tool.pdm.build]
source-includes = [
    "tests/",
    "docs_src/",
    "requirements*.txt",
    "scripts/",
    ]

[tool.tiangolo._internal-slim-build]
sync-dependencies = [
    "typer-slim[standard]",
    "typer-cli",
    "typer"
]

[tool.tiangolo._internal-slim-build.packages.typer-slim.project]
name = "typer-slim"

[tool.tiangolo._internal-slim-build.packages.typer]
include-optional-dependencies = ["standard"]

[tool.tiangolo._internal-slim-build.packages.typer.project]
optional-dependencies = {}

[tool.tiangolo._internal-slim-build.packages.typer.project.scripts]
typer = "typer.cli:main"

[tool.tiangolo._internal-slim-build.packages.typer-cli.project]
name = "typer-cli"
readme = "typer-cli/README.md"
dependencies = [
    "typer",
]
optional-dependencies = {}

[tool.tiangolo._internal-slim-build.packages.typer-cli.tool.pdm.build]
# excludes needs to explicitly exclude the top level python packages,
# otherwise PDM includes them by default
# A "*" glob pattern can't be used here because in PDM internals, the patterns are put
# in a set (unordered, order varies) and each excluded file is assigned one of the
# glob patterns that matches, as the set is unordered, the matched pattern could be "*"
# independent of the order here. And then the internal code would give it a lower score
# than the one for a default included file.
# By not using "*" and explicitly excluding the top level packages, they get a higher
# score than the default inclusion
excludes = ["typer", "tests", "pdm_build.py"]
# source-includes needs to explicitly define some value because PDM will check the
# truthy value of the list, and if empty, will include some defaults, including "tests",
# an empty string doesn't match anything, but makes the list truthy, so that PDM
# doesn't override it during the build.
source-includes = [""]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = [
    "error",
    # For pytest-xdist
    'ignore::DeprecationWarning:xdist',
]

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "docs_src",
    "tests",
    "typer"
]
omit = [
    "typer/_typing.py",
    "docs_src/app_dir/tutorial001_py39.py",  # ToDo: add test
    "docs_src/arguments/optional/tutorial000_py39.py",  # ToDo: add test
    "docs_src/launch/tutorial001_py39.py",  # ToDo: add test
    "docs_src/launch/tutorial002_py39.py",  # ToDo: add test
    "docs_src/options/callback/tutorial002_*.py",   # ToDo: add test
    "docs_src/options/help/tutorial004_*.py",   # ToDo: add test
    "docs_src/options/password/tutorial001_*.py",    # ToDo: add test
    "docs_src/options/password/tutorial002_*.py",    # ToDo: add test
    "docs_src/options/version/tutorial001_*.py",  # ToDo: add test
    "docs_src/options/version/tutorial002_*.py",  # ToDo: add test
    "docs_src/options_autocompletion/tutorial001_*.py",  # ToDo: add test
    "docs_src/options_autocompletion/tutorial005_*.py",  # ToDo: add test
    "docs_src/options_autocompletion/tutorial006_*.py",  # ToDo: add test
    "docs_src/printing/tutorial001_py39.py",  # ToDo: add test
    "docs_src/printing/tutorial002_py39.py",  # ToDo: add test
    "docs_src/printing/tutorial003_py39.py",  # ToDo: add test
    "docs_src/printing/tutorial004_py39.py",  # ToDo: add test
    "docs_src/printing/tutorial005_py39.py",  # ToDo: add test
    "docs_src/printing/tutorial006_py39.py",  # ToDo: add test
    "docs_src/progressbar/tutorial001_py39.py",  # ToDo: add test
    "docs_src/progressbar/tutorial002_py39.py",  # ToDo: add test
    "docs_src/progressbar/tutorial003_py39.py",  # ToDo: add test
    "docs_src/progressbar/tutorial004_py39.py",  # ToDo: add test
    "docs_src/progressbar/tutorial005_py39.py",  # ToDo: add test
    "docs_src/progressbar/tutorial006_py39.py",  # ToDo: add test
    "docs_src/prompt/tutorial004_py39.py",  # ToDo: add test
    "docs_src/using_click/tutorial001_py39.py",  # ToDo: add test
    "docs_src/using_click/tutorial002_py39.py",  # ToDo: add test
]
context = '${CONTEXT}'
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "docs_src.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "shellingham"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP", # pyupgrade
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
    "TID252", # relative imports okay
]

[tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]
# rich_utils is allowed to use rich imports
"typer/rich_utils.py" = ["TID251"]
# This file is more readable without yield from
"docs_src/progressbar/tutorial004_py39.py" = ["UP028", "B007"]
# Default mutable data structure
"docs_src/options_autocompletion/tutorial006_an_py39.py" = ["B006"]
"docs_src/multiple_values/multiple_options/tutorial002_an_py39.py" = ["B006"]
"docs_src/options_autocompletion/tutorial007_an_py39.py" = ["B006"]
"docs_src/options_autocompletion/tutorial008_an_py39.py" = ["B006"]
"docs_src/options_autocompletion/tutorial009_an_py39.py" = ["B006"]
"docs_src/parameter_types/enum/tutorial003_an_py39.py" = ["B006"]
# Loop control variable `value` not used within loop body
"docs_src/progressbar/tutorial001_py39.py" = ["B007"]
"docs_src/progressbar/tutorial003_py39.py" = ["B007"]
"docs_src/progressbar/tutorial005_py39.py" = ["B007"]
"docs_src/progressbar/tutorial006_py39.py" = ["B007"]
# Local variable `delete` is assigned to but never used
"docs_src/prompt/tutorial003_py39.py" = ["F841"]
# Loop control variable `x` not used within loop body
"docs_src/using_click/tutorial001_py39.py" = ["B007"]
# No need to worry about rich imports in docs
"docs_src/*" = ["TID"]

[tool.ruff.lint.isort]
known-third-party = ["typer", "click"]
# For docs_src/subcommands/tutorial003/
known-first-party = ["reigns", "towns", "lands", "items", "users"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.flake8-tidy-imports]
# Import rich_utils from within functions (lazy), not at the module level (TID253)
banned-module-level-imports = ["typer.rich_utils"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"rich".msg = "Use 'typer.rich_utils' instead of importing from 'rich' directly."
"shellingham.detect_shell".msg = """\
Use 'typer._completion_shared._get_shell_name' instead of using \
'shellingham.detect_shell' directly.
"""
