[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "typer-cli"
dynamic = ["version"]
description = "Typer, build great CLIs. Easy to code. Based on Python type hints."
authors = [
    {name = "Sebastián Ramírez", email = "tiangolo@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer-slim[standard]",
]

[project.urls]
Documentation = "https://typer.tiangolo.com/"
homepage = "https://github.com/tiangolo/typer"

[project.optional-dependencies]
# For backwards compatibility
all = []

[project.scripts]
typer = "typer.cli:main"

[tool.pdm]
version = { source = "file", path = "../typer/__init__.py" }
distribution = true

[tool.pdm.build]
excludes = ["*"]
